# gwt

./: .dockerignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile.playground  Makefile  README.md
.claude/: settings.json
.claude/agents/: reika-dev.md  roger-task-planner.md  ryo-brancher.md
.claude/hooks/: check-rust-version.sh
.github/workflows/: ci.yml
bot/: bot.md  rust-feature-implementing.md  task-planning.md
docs/: issue-72.md
src/: config.rs  lib.rs  main.rs  shell.rs  utility.rs  worktree.rs
src/command/: mod.rs
src/command/completion/: mod.rs
src/command/config/: mod.rs
src/command/current/: mod.rs
src/command/home/: mod.rs
src/command/shell/: mod.rs
src/command/worktree/: list.rs  mod.rs
src/config/: mod.rs
src/utility/: mod.rs  worktree.rs
tests/: integration_real_git.rs  integration_switch.rs
