[package]
name = "gwt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gwtree"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dialoguer = "0.11"
dirs = "5.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.14"
